# sc-hasprocess

./: .gitignore  ABOUT_CMAKE.md  CMakeLists.txt  COMPILE_COMMANDS.md  GNUmakefile  README.md  hasprocess.cpp  hasprocess.html
cmake/: SystemC.cmake
